Añadio boostrap y jquery, index ejemplo

--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Archivo sample</title>
-</head>
-<body>
-	
-	<div>
-		<p>Hola Mundo!</p>
-	</div>
-
-	<div>
-		<p>PAPW2</p>
-	</div>
-
-	<div>
-		<p>Luis Carlos</p>
-		<p>Emmanuel</p>
-	</div>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>BurnIt</title>
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+	</head>
+	<body>
+		<h1>Hello, world!</h1>
+		<script src="js/jquery-3.3.1.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+	</body>
 </html>
