--- a/registro.html
+++ b/registro.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="favicon.ico" /> 
 		<title>Burn It - Registro</title>
 
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -43,46 +44,52 @@
 				</h2>
 			</div>
 
-			   <div class="form-group row">
+			   <div class="form-group row" id="group_nombre">
 				   <label for="txt_nombre" class="col-sm-2 col-form-label">Nombre</label>
-				   <div class="col-sm-10">
+				   <div class="col-sm-8">
 						<input type="text" class="form-control" id="txt_nombre" placeholder="Nombre">
 				   </div>
+				   <span class="help-inline hidden col-sm-2">Por favor escribe un nombre</span>
 			   </div>
 
-			   <div class="form-group row">
+			   <div class="form-group row" id="group_apellido">
 					<label for="txt_apellido" class="col-sm-2 col-form-label">Apellido(s)</label>
-					<div class="col-sm-10">
+					<div class="col-sm-8">
 						 <input type="text" class="form-control" id="txt_apellido" placeholder="Apellido(s)">
 					</div>
+					<span class="help-inline hidden col-sm-2">Por favor escribe apellido(s)</span>
 				</div>
 
-				<div class="form-group row">
+				<div class="form-group row" id="group_correo">
 						<label for="txt_correo" class="col-sm-2 col-form-label">Correo Electrónico</label>
-						<div class="col-sm-10">
+						<div class="col-sm-8">
 						  <input type="email" class="form-control" id="txt_correo" placeholder="Correo Electrónico">
 						</div>
+						<span class="help-inline hidden col-sm-2"></span>
 				</div>
 
-				<div class="form-group row">
+				<div class="form-group row" id="group_pass">
 						<label for="txt_pass" class="col-sm-2 col-form-label">Contraseña</label>
-						<div class="col-sm-10">
+						<div class="col-sm-8">
 						  <input type="password" class="form-control" id="txt_pass" placeholder="Contraseña">
 						</div>
+						<span class="help-inline hidden col-sm-2">La contraseña está vacia</span>
 				</div>
 
-				<div class="form-group row">
+				<div class="form-group row" id="group_passConfirma">
 						<label for="txt_passConfirma" class="col-sm-2 col-form-label">Confirmar Contraseña</label>
-						<div class="col-sm-10">
+						<div class="col-sm-8">
 						  <input type="password" class="form-control" id="txt_passConfirma" placeholder="Confirmar Contraseña">
 						</div>
+						<span class="help-inline hidden col-sm-2"></span>
 				</div>
 
-				<div class="form-group row">
+				<div class="form-group row" id="group_fechaNacimiento">
 						<label for="txt_fechaNacimiento" class="col-sm-2 col-form-label">Nombre</label>
-						<div class="col-sm-10">
+						<div class="col-sm-8">
 							 <input type="date" class="form-control" id="txt_fechaNacimiento">
 						</div>
+						<span class="help-inline hidden col-sm-2">Por favor introduce una fecha</span>
 				</div>
 
 				<div class="form-group row">
