Titulo Registro cambiado a una mejor frase
En el html de registro se cambió Registro a ¿Listo para unirte a BURNIT? y añadido una pequeña leyenda: Por favor llena los siguientes datos :)

--- a/registro.html
+++ b/registro.html
@@ -40,8 +40,11 @@
 
 			<div class="form-group row">
 				<h2>
-					Registro
+					¿Listo para unirte a BURNIT?
 				</h2>
+				<h6>
+					Por favor llena los siguientes datos :)
+				</h6>
 			</div>
 
 			   <div class="form-group row" id="group_nombre">
