Un poco de responsive, ya va quedando

--- a/landing.html
+++ b/landing.html
@@ -41,9 +41,17 @@
     </div>
    
 </div>
-<div style="position: relative; margin-top: 50px;">
-  <div class="container-fluid">
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-md-12">
+      <h1 class="h1-dmd">Crea y busca reseñas de </h1><h1></h1>
+    </div>
+  </div>
+</div>
+<div style="position: relative; margin-top: 35px; height: 85vh;" class="invisble-sm visble-sm visible-md  visible-lg">
+  <div class="container-fluid ">
     <div class="row">
+
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="crystal-grid">
           <ul>
@@ -59,7 +67,54 @@
   </div>
   
 </div>
+<div class="container-fluid visible-sm visible-xs invisble-lg invisble-md">
+    <div class="row">
+      <div class="col-sm-12 col-sm-12 rowImg">
+        <img src="resources/p1.jpg">
+        <h3>Libros </h3>
+      </div>
+      <div class="col-sm-12 col-sm-12 rowImg">
+        <img src="resources/p2.png">
+        <h3>Comics</h3>
+      </div>
+      <div class="col-sm-12 col-sm-12 rowImg">
+        <img src="resources/prueba6.jpg">
+        <h3>Videojuegos</h3>
+      </div>
+      <div class="col-sm-12 col-sm-12 rowImg">
+        <img src="resources/p4.jpg">
+        <h3>Peliculas</h3>
+      </div>
+      <div class="col-sm-12 col-sm-12 rowImg">
+        <img src="resources/p5.jpg">
+        <h3>Series</h3>
+      </div>
+      
+    </div>
+  </div>
+<div style="height: 95vh;  margin-top: 20px;" class="bg-grey">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h1 style="color: #bfbfbf;" class="text-center">Califica</h1>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <img src="resources/IconServ1.png" class="img-circle" style="width: 100%; background: black;">
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <img src="resources/IconServ2.png" class="img-circle" style="width: 100%; background: black;">
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <img src="resources/IconServ3.png" class="img-circle" style="width: 100%; background: black;">
+      </div>
+    </div>
+    
+  </div>
+</div>
 
+<script type="text/javascript">
+  
+</script>
   
 
 </body>
