Olvide poner la categoria xD

--- a/CrearCritica.html
+++ b/CrearCritica.html
@@ -26,7 +26,14 @@
 			   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					  
 						  <ul class="nav navbar-nav navbar-right">
-							  
+							<li><select style="margin-top: 10px" class="form-control">
+							  <option>Categoria</option>
+							  <option>Peliculas</option>
+							  <option>Videojuegos</option>
+							  <option>Series</option>
+							  <option>Comics</option>
+							  <option>Libros</option>
+							</select></li>
 							<li><a href="#" class="profile">
 								<img src="resources/Profile.jpg" class="img-circle ">
 								<span>Nombre Usuario</span>
