--- a/Profile.html
+++ b/Profile.html
@@ -88,19 +88,19 @@
 		      			<div class="form-group">
 		      				<label for="nombre" class="col-sm-2 control-label">Nombre</label>
 						    <div class="col-sm-10">
-						      <input type="email" class="form-control" id="nombre" placeholder="Email">
+						      <input type="text" class="form-control" id="nombre" >
 						    </div>
 		      			</div>
 		      			<div class="form-group">
 		      				<label for="Apellido" class="col-sm-2 control-label">Apellido</label>
 						    <div class="col-sm-10">
-						      <input type="email" class="form-control" id="Apellido" placeholder="Email">
+						      <input type="text" class="form-control" id="Apellido">
 						    </div>
 		      			</div>
 		      			<div class="form-group">
 		      				<label for="email" class="col-sm-2 control-label">Email</label>
 						    <div class="col-sm-10">
-						      <input type="email" class="form-control" id="email" placeholder="Email">
+						      <input type="email" class="form-control" id="email" >
 						    </div>
 		      			</div>
 		      			<div class="form-group">
